# unimrcp-vosk-plugin

./: .gitignore  configure.ac  update_vosk_server.sh
conf/: unimrcpserver.xml
libs/apr-toolkit/include/: apt_timer_queue.h
libs/apr-toolkit/src/: apt_consumer_task.c  apt_timer_queue.c
libs/mpf/src/: mpf_activity_detector.c
plugins/: Makefile.am
plugins/kaldi-recog/: Makefile.am
plugins/kaldi-recog/src/: kaldi_recog_engine.cc
plugins/vosk-recog/: Makefile.am
plugins/vosk-recog/src/: kaldi_recog_engine.cc  vosk_recog_engine.c
